--- a/two_4D.html
+++ b/two_4D.html
@@ -385,6 +385,9 @@
 			window.$ = window.jQuery = require("./js/jquery.min.js");
 		</script>
 		
+		<!-- 语言包 -->
+		<script src="./lang/lang.js" defer></script>
+		
 		<!-- babylon.js -->
 		<script src="./js/babylon.min.js"></script>
 		<script src="./js/babylonjs.materials.min.js"></script>
@@ -440,8 +443,8 @@
 				<div>
 					<p class="name"></p>
 					<p class="time">
-						局时：<span class="total">15:00</span> &nbsp;
-						步时：<span class="step">60s</span>
+						<span>局时：</span><span class="total">15:00</span> &nbsp;
+						<span>步时：</span><span class="step">60s</span>
 					</p>
 				</div>
 			</div>
@@ -468,8 +471,8 @@
 				<div>
 					<p class="name"></p>
 					<p class="time">
-						局时：<span class="total">15:00</span> &nbsp;
-						步时：<span class="step">60s</span>
+						<span>局时：</span><span class="total">15:00</span> &nbsp;
+						<span>步时：</span><span class="step">60s</span>
 					</p>
 				</div>
 				<i></i>
@@ -552,9 +555,6 @@ $(window).resize(function(){
 document.addEventListener("plusready", function(){
 	plus.navigator.setStatusBarBackground("#aef");
 	plus.navigator.setStatusBarStyle("dark");
-	plus.key.addEventListener("backbutton", function(){
-		go("index.html");
-	});
 }, false);
 </script>
 <script>
@@ -637,6 +637,11 @@ class Board{
 			this.scene
 		);
 		this.camera.attachControl(this.canvas, false);
+		//删除默认按键
+		this.camera.inputs.attached.keyboard.keysUp = [];
+		this.camera.inputs.attached.keyboard.keysDown = [];
+		this.camera.inputs.attached.keyboard.keysLeft = [];
+		this.camera.inputs.attached.keyboard.keysRight = [];
 		
 		//添加光
 		this.hemisphericLight = new BABYLON.HemisphericLight( //模拟环境光
@@ -793,7 +798,7 @@ class Board{
 		
 		//天空盒
 		if (skyboxDisplay){ //允许显示
-			const skybox = BABYLON.Mesh.CreateBox("skyBox", 3000, this.scene);
+			const skybox = BABYLON.Mesh.CreateBox("skyBox", 1415, this.scene);
 			const skyMaterial = new BABYLON.SkyMaterial("skyMaterial", this.scene);
 			skyMaterial.backFaceCulling = false;
 			skybox.material = skyMaterial;
@@ -861,7 +866,7 @@ class Board{
 				setInterval(function(){
 					if ((skyMaterial.inclination+0.5)%2 < 1)
 						return (moon.isVisible = false);
-					const radius = 500, //轨道距离
+					const radius = 400, //轨道距离
 						theta = (skyMaterial.inclination+1.5)%2 /2 *2*Math.PI;
 					moon.isVisible = true;
 					moon.position.set(
@@ -1613,7 +1618,7 @@ class Board{
 }
 
 
-const {N=5, cols=10, rows=10, depth=10, width=10, totalTime=900, stepTime=60} = JSON.parse(localStorage.getItem("五子棋_游戏设置") || "{}"),
+const {N=5, cols=10, rows=10, depth=10, width=10} = JSON.parse(localStorage.getItem("五子棋_游戏设置") || "{}"),
 	{mistake=true, skybox=true, moon=true, border=true} = JSON.parse(localStorage.getItem("五子棋_个性化设置") || "{}");
 const board = new Board({ //棋盘
 	canvas: $("#board")[0],
@@ -1685,19 +1690,19 @@ let game = {
 		t0: [null, null], //上次时间
 		ids: [null, null], //计时器id
 		time: [
-			{total: totalTime, step: stepTime}, //0: 白
-			{total: totalTime, step: stepTime} //1: 黑
+			{total: 900, step: 60}, //0: 白
+			{total: 900, step: 60} //1: 黑
 		], //剩余时间
 		timeWarning: { //时间警告
 			total: {
 				60: ["#f00", 1.2],
 				300: ["#fa0", 1.1],
-				Infinity: ["inherit", 1]
+				900: ["inherit", 1]
 			},
 			step: {
 				10: ["#f00", 1.5],
 				30: ["#fa0", 1.1],
-				Infinity: ["inherit", 1]
+				60: ["inherit", 1]
 			}
 		},
 		scores: {
@@ -1719,7 +1724,7 @@ let game = {
 			step = Math.max(this.time[1].step, 0);
 			
 			totalElem = $("#main > .black > div > .time > .total"),
-			stepElem = totalElem.next(".step");
+			stepElem = totalElem.nextAll(".step");
 			
 			totalElem.html(
 				( ~~(total/60) +"").padStart(2,"0") + ":" + ( ~~total%60 +"").padStart(2, "0")
@@ -1749,7 +1754,7 @@ let game = {
 			step = Math.max(this.time[0].step, 0);
 			
 			totalElem = $("#main > .white > div > .time > .total"),
-			stepElem = totalElem.next(".step");
+			stepElem = totalElem.nextAll(".step");
 			
 			totalElem.html(
 				( ~~(total/60) +"").padStart(2,"0") + ":" + ( ~~total%60 +"").padStart(2, "0")
@@ -1794,7 +1799,7 @@ let game = {
 			if (this.time[this.turn].total <= 0){ //超出局时
 				this.time[this.turn].step += 5;
 			}else{
-				this.time[this.turn].step = stepTime; //重置步时
+				this.time[this.turn].step = 60; //重置步时
 				//this.time[this.turn].total += 5; //增加局时
 			}
 			this.updateTime(this.turn);
@@ -2047,10 +2052,10 @@ function init(){
 	clearInterval( game.ids[0] );
 	clearInterval( game.ids[1] ); //时间暂停
 	game.t0[0] = game.t0[1] = game.ids[0] = game.ids[1] = null;
-	game.time[0].total = totalTime;
-	game.time[0].step = stepTime;
-	game.time[1].total = totalTime;
-	game.time[1].step = stepTime;
+	game.time[0].total = 900;
+	game.time[0].step = 60;
+	game.time[1].total = 900;
+	game.time[1].step = 60;
 	game.scores.now[0] = game.scores.now[1] =
 		game.scores.goal[0] = game.scores.goal[1] = 0;
 	game.scores.t0 = +new Date();
@@ -2108,7 +2113,21 @@ function request(data){
 
 
 let lastMistake = null; //上次防误触物体
+let validClick = true; //是否有效点击
+setTimeout(()=>{ //等待loadScene
+	board.scene.onPointerObservable.add(function(e){
+		if (e.type == 1){ //mousedown
+			validClick = true; //新一次点击
+			console.log("mousedown", validClick)
+		}else if (e.type == 4){ //mousemove
+			validClick = false; //不允许移动
+			console.log("mousemove", validClick)
+		}
+	});
+}, 600);
 $("#board").click(function(e){
+	console.log("click", validClick)
+	if (!validClick) return; //无效点击
 	if (!worker) return; //未初始化线程
 	if (game.winner !== false) return; //已结束
 	if (waiting) return; //上次未响应
@@ -2293,7 +2312,7 @@ $("#toolBtn > .analyse").click(function(){
 
 //重放
 let reviewRestore; //重置函数
-$("#toolBtn > .review").click(function(){
+function review(){
 	if ( $("#tools > .review").css("display") == "none" ){ //需显示
 		$(this).attr("disabled", "disabled");
 		$("#tools > .review").slideToggle("slow", ()=>$(this).removeAttr("disabled"));
@@ -2302,8 +2321,6 @@ $("#toolBtn > .review").click(function(){
 		analyse(false); //关闭棋局分析
 		$("#tools > .review > .stop").hide();
 		$("#tools > .review > .play").show(); //暂停
-		
-		if ( !board.lines.circle[0] ) return; //未下棋 跳过
 		
 		request({
 			type: "review" //重放
@@ -2391,15 +2408,47 @@ $("#toolBtn > .review").click(function(){
 	}else{
 		clearInterval(review_id);
 		review_id = null;
-		if (reviewRestore) //可能被跳过
-			reviewRestore(); //重置
+		reviewRestore(); //重置
 		
 		$("#tools > .review > .stop").hide();
 		$("#tools > .review > .play").show();
 		$(this).attr("disabled", "disabled");
 		$("#tools > .review").slideToggle("slow", ()=>$(this).removeAttr("disabled"));
 	}
-});
+}
+$("#toolBtn > .review").click(review);
+
+
+/* 电脑版按键 */
+document.onkeydown = function(e){
+	console.log(e.key)
+	if (e.key == "F2"){ //评分
+		if (!$("#toolBtn > .scores").attr("disabled"))
+			scores();
+	}else if (e.key == "F3"){ //分析
+		if (!$("#toolBtn > .analyse").attr("disabled"))
+			analyse();
+	}else if (e.key == "F4"){ //复盘
+		if (!$("#toolBtn > .review").attr("disabled"))
+			review();
+	}else if (e.key == "F5"){ //再来一局
+		init();
+	}else if (e.key == "ArrowUp"){ //棋盘向上
+		board.heightAdd();
+	}else if (e.key == "ArrowDown"){ //棋盘向下
+		board.heightSub();
+	}else if (e.key == "ArrowLeft"){ //棋盘缩小
+		board.layerSub();
+	}else if (e.key == "ArrowRight"){ //棋盘放大
+		board.layerAdd();
+	}else if (e.key == "PageUp"){ //W轴向上
+		board.widthSub();
+	}else if (e.key == "PageDown"){ //W轴向下
+		board.widthAdd();
+	}
+	e.preventDefault();
+	return false;
+};
 </script>
 		
 	</body>
