--- a/two_2D.html
+++ b/two_2D.html
@@ -232,6 +232,9 @@
 			window.$ = window.jQuery = require("./js/jquery.min.js");
 		</script>
 		
+		<!-- 语言包 -->
+		<script src="./lang/lang.js" defer></script>
+		
 		<!-- layui -->
 		<!--<link rel="stylesheet" href="https://unpkg.com/layui@2.6.4/dist/css/layui.css">
 		<script src="https://unpkg.com/layui@2.6.8/dist/layui.js"></script>-->
@@ -282,8 +285,8 @@
 				<div>
 					<p class="name"></p>
 					<p class="time">
-						局时：<span class="total">10:00</span> &nbsp;
-						步时：<span class="step">30s</span>
+						<span>局时：</span><span class="total">10:00</span> &nbsp;
+						<span>步时：</span><span class="step">30s</span>
 					</p>
 				</div>
 			</div>
@@ -292,8 +295,8 @@
 				<div>
 					<p class="name"></p>
 					<p class="time">
-						局时：<span class="total">10:00</span> &nbsp;
-						步时：<span class="step">30s</span>
+						<span>局时：</span><span class="total">10:00</span> &nbsp;
+						<span>步时：</span><span class="step">30s</span>
 					</p>
 				</div>
 				<i></i>
@@ -347,9 +350,6 @@ resize();
 document.addEventListener("plusready", function(){
 	plus.navigator.setStatusBarBackground("#aef");
 	plus.navigator.setStatusBarStyle("dark");
-	plus.key.addEventListener("backbutton", function(){
-		go("index.html");
-	});
 }, false);
 </script>
 <script>
@@ -498,7 +498,7 @@ class Board{
 	}
 }
 
-const {N=5, cols=19, rows=19, place=0, totalTime=300, stepTime=30} = JSON.parse(localStorage.getItem("五子棋_游戏设置") || "{}"),
+const {N=5, cols=19, rows=19, place=0} = JSON.parse(localStorage.getItem("五子棋_游戏设置") || "{}"),
 	{mistake=true} = JSON.parse(localStorage.getItem("五子棋_个性化设置") || "{}");
 $("#board").css("height", WIDTH *rows/cols + "px")
 	.attr("height", 2*WIDTH *rows/cols);
@@ -520,19 +520,19 @@ let game = {
 		t0: [null, null], //上次时间
 		ids: [null, null], //计时器id
 		time: [
-			{total: totalTime, step: stepTime}, //0: 白
-			{total: totalTime, step: stepTime} //1: 黑
+			{total: 300, step: 30}, //0: 白
+			{total: 300, step: 30} //1: 黑
 		], //剩余时间
 		timeWarning: { //时间警告
 			total: {
 				60: ["#f00", 1.2],
 				180: ["#fa0", 1.1],
-				Infinity: ["#000", 1]
+				600: ["#000", 1]
 			},
 			step: {
 				10: ["#f00", 1.5],
 				20: ["#fa0", 1.1],
-				Infinity: ["#000", 1]
+				45: ["#000", 1]
 			}
 		},
 		scores: {
@@ -554,7 +554,7 @@ let game = {
 			step = Math.max(this.time[1].step, 0);
 			
 			totalElem = $("#main > .black > div > .time > .total"),
-			stepElem = totalElem.next(".step");
+			stepElem = totalElem.nextAll(".step");
 			
 			totalElem.html(
 				( ~~(total/60) +"").padStart(2,"0") + ":" + ( ~~total%60 +"").padStart(2, "0")
@@ -584,7 +584,7 @@ let game = {
 			step = Math.max(this.time[0].step, 0);
 			
 			totalElem = $("#main > .white > div > .time > .total"),
-			stepElem = totalElem.next(".step");
+			stepElem = totalElem.nextAll(".step");
 			
 			totalElem.html(
 				( ~~(total/60) +"").padStart(2,"0") + ":" + ( ~~total%60 +"").padStart(2, "0")
@@ -629,7 +629,7 @@ let game = {
 			if (this.time[this.turn].total <= 0){ //超出局时
 				this.time[this.turn].step += 5;
 			}else{
-				this.time[this.turn].step = stepTime; //重置步时
+				this.time[this.turn].step = 30; //重置步时
 				//this.time[this.turn].total += 5; //增加局时
 			}
 			this.updateTime(this.turn);
@@ -663,7 +663,7 @@ let game = {
 			$("#toolBtn > .review").removeAttr("disabled"); //解除禁用
 			
 			const t = (new Date() - this.startTime) / 1000;
-			layer.alert(`${text}<br>历时${~~(t/60)}分${~~t%60}秒<br>${game.steps}步（${game.steps/2}回合）`,
+			layer.alert(`<span>${text}</span><br><span>历时</span>${~~(t/60)}<span>分</span>${~~t%60}<span>秒</span><br>${game.steps}<span>步</span><span>（</span>${game.steps/2}<span>回合</span><span>）<span>`,
 				{title: "游戏结束"}
 			);
 		},
@@ -844,10 +844,10 @@ function init(){
 	clearInterval( game.ids[0] );
 	clearInterval( game.ids[1] ); //时间暂停
 	game.t0[0] = game.t0[1] = game.ids[0] = game.ids[1] = null;
-	game.time[0].total = totalTime;
-	game.time[0].step = stepTime;
-	game.time[1].total = totalTime;
-	game.time[1].step = stepTime;
+	game.time[0].total = 300;
+	game.time[0].step = 30;
+	game.time[1].total = 300;
+	game.time[1].step = 30;
 	game.scores.now[0] = game.scores.now[1] =
 		game.scores.goal[0] = game.scores.goal[1] = 0;
 	game.scores.t0 = +new Date();
@@ -1018,7 +1018,7 @@ $("#toolBtn > .analyse").click(function(){
 
 //复盘
 let reviewRestore; //重置函数
-$("#toolBtn > .review").click(function(){
+function review(){
 	if ( $("#tools > .review").css("display") == "none" ){ //需显示
 		$(this).attr("disabled", "disabled");
 		$("#tools > .review").slideToggle("slow", ()=>$(this).removeAttr("disabled"));
@@ -1027,8 +1027,6 @@ $("#toolBtn > .review").click(function(){
 		analyse(false); //关闭棋局分析
 		$("#tools > .review > .stop").hide();
 		$("#tools > .review > .play").show(); //暂停
-		
-		if ( !board.lines.circle[0] ) return; //未下棋 跳过
 		
 		request({
 			type: "review" //重放
@@ -1102,15 +1100,35 @@ $("#toolBtn > .review").click(function(){
 	}else{
 		clearInterval(review_id);
 		review_id = null;
-		if (reviewRestore) //可能被跳过
-			reviewRestore(); //重置
+		reviewRestore(); //重置
 		
 		$("#tools > .review > .stop").hide();
 		$("#tools > .review > .play").show();
 		$(this).attr("disabled", "disabled");
 		$("#tools > .review").slideToggle("slow", ()=>$(this).removeAttr("disabled"));
 	}
-});
+}
+$("#toolBtn > .review").click(review);
+
+
+/* 电脑版按键 */
+document.onkeydown = function(e){
+	console.log(e.key)
+	if (e.key == "F2"){ //评分
+		if (!$("#toolBtn > .scores").attr("disabled"))
+			scores();
+	}else if (e.key == "F3"){ //分析
+		if (!$("#toolBtn > .analyse").attr("disabled"))
+			analyse();
+	}else if (e.key == "F4"){ //复盘
+		if (!$("#toolBtn > .review").attr("disabled"))
+			review();
+	}else if (e.key == "F5"){ //再来一局
+		init();
+	}
+	e.preventDefault();
+	return false;
+};
 </script>
 		
 	</body>
