--- a/online_2D.html
+++ b/online_2D.html
@@ -411,6 +411,9 @@ resize();
 document.addEventListener("plusready", function(){
 	plus.navigator.setStatusBarBackground("#aef");
 	plus.navigator.setStatusBarStyle("dark");
+	plus.key.addEventListener("backbutton", function(){
+		go("room.html");
+	});
 }, false);
 </script>
 <script>
