--- a/one_2D.html
+++ b/one_2D.html
@@ -356,6 +356,9 @@ resize();
 document.addEventListener("plusready", function(){
 	plus.navigator.setStatusBarBackground("#aef");
 	plus.navigator.setStatusBarStyle("dark");
+	plus.key.addEventListener("backbutton", function(){
+		go("index.html");
+	});
 }, false);
 </script>
 <script>
@@ -722,7 +725,7 @@ let game = {
 				saveGameRecord();
 				if (gameOverMusic)
 					gameOverMusic.stop();
-				gameOverMusic = new Player("./music/win.m4a").play();
+				gameOverMusic = new Player("./music/win.mp3").play();
 				
 			}else if (win === false){
 				this.winner = 1-this.first;
