--- a/one_4D.html
+++ b/one_4D.html
@@ -400,7 +400,7 @@
 		<link rel="stylesheet" href="./layui/css/layui.css" />
 		
 		<!-- 调试工具 -->
-		<!-- <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+		<!--<script src="https://cdn.jsdelivr.net/npm/eruda"></script>
 		<script src="https://cdn.bootcss.com/vConsole/3.3.4/vconsole.min.js"></script>
 		<script>
 		if ( /ipad|iphone|midp|rv:1.2.3.4|ucweb|android|windows ce|windows mobile/.test( navigator.userAgent.toLowerCase() ) ){
@@ -408,7 +408,7 @@
 			eruda.init();
 			new VConsole();
 		}
-		</script> -->
+		</script>-->
 		
 		<!-- PianoMusic Bgm -->
 		<script src="./js/acoustic_grand_piano-ogg.js"></script>
@@ -515,26 +515,6 @@
 		</section>
 		
 <script>
-//生成任意维数组
-Array.new = function(value, len, ...num){
-	if (num.length == 0){
-		if (value instanceof Function){
-			return Array.from({
-				length: len
-			}, value);
-		}else{
-			return Array.from({
-				length: len
-			}, ()=>value);
-		}
-	}else{
-		return Array.from({
-			length: len
-		}, ()=>Array.new(value, ...num));
-	}
-};
-</script>
-<script>
 function resize(){
 	console.log("resize")
 	
@@ -561,6 +541,9 @@ $(window).resize(function(){
 document.addEventListener("plusready", function(){
 	plus.navigator.setStatusBarBackground("#aef");
 	plus.navigator.setStatusBarStyle("dark");
+	plus.key.addEventListener("backbutton", function(){
+		go("index.html");
+	});
 }, false);
 </script>
 <script>
@@ -1940,7 +1923,7 @@ let game = {
 				saveGameRecord();
 				if (gameOverMusic)
 					gameOverMusic.stop();
-				gameOverMusic = new Player("./music/win.m4a").play();
+				gameOverMusic = new Player("./music/win.mp3").play();
 				
 			}else if (win === false){
 				this.winner = 1-this.first;
@@ -2301,21 +2284,22 @@ function request(data){
 
 
 let lastMistake = null; //上次防误触物体
-let validClick = true; //是否有效点击
-setTimeout(()=>{ //等待loadScene
-	board.scene.onPointerObservable.add(function(e){
-		if (e.type == 1){ //mousedown
-			validClick = true; //新一次点击
-			console.log("mousedown", validClick)
-		}else if (e.type == 4){ //mousemove
-			validClick = false; //不允许移动
-			console.log("mousemove", validClick)
-		}
-	});
-}, 600);
+let moveTimes = 0; //移动次数
+if (navigator.device > 0) //电脑
+	setTimeout(()=>{ //等待loadScene
+		board.scene.onPointerObservable.add(function(e){
+			if (e.type == 1){ //mousedown
+				moveTimes = 0; //新一次点击
+				console.log("mousedown", validClick)
+			}else if (e.type == 4){ //mousemove
+				moveTimes++; //不允许移动
+				console.log("mousemove", validClick)
+			}
+		});
+	}, 600);
 $("#board").click(function(e){
-	console.log("click", validClick)
-	if (!validClick) return; //无效点击
+	console.log("click", moveTimes)
+	if (moveTimes > 5) return; //无效点击
 	if (!worker) return; //未初始化线程
 	if (game.winner !== false) return; //已结束
 	if (waiting) return; //上次未响应
